Resolves tdf#166541 - Welcome dialog must not use standard buttons

Replaced hijacked Okay and Reset buttons by special buttons

Change-Id: If8315be3f8f71ca1fc5fae0136eef4a76232b3e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185219
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins